src/objects/Testimonial__c.object
<CustomObject>
    <fields>
        <fullName>Photo_Resource__c</fullName>
        <label>Photo Resource</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish on Website?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testimonial_Text__c</fullName>
        <label>Testimonial Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Testimonial</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Role__c</columns>
        <columns>Publish_on_Website__c</columns>
        <columns>Photo_Resource__c</columns>
        <columns>Testimonial_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Testemonial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Testimonials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>